ETL modified with management of date

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-# Configuration des chemins
-# Note: Vous pouvez utiliser des chemins relatifs (par rapport au répertoire du script)
-# ou des chemins absolus (commençant par / ou C:\ etc.)
+# Path configuration
+# Note: You can use relative paths (relative to the script directory)
+# or absolute paths (starting with / or C:\ etc.)
 DATA_DIR=./data
 LANDING_SUBDIR=landing
 RAW_SUBDIR=raw
@@ -8,22 +8,26 @@ SILVER_SUBDIR=silver
 GOLD_SUBDIR=gold
 LOGS_SUBDIR=logs
 
-# Configuration du traitement
+# Processing configuration
 EXPECTED_TABLES=Device,EPG,Playback,User,Smartcard,VODCatalog,VODCatalogExtended
 MOCK_SNOWFLAKE=true
-DELETE_SOURCE_FILES=false
-DELETE_SOURCE_FILES_AFTER_LOAD=false
-DELETE_SOURCE_FILES_AFTER_LOAD_SNOWFLAKE=false
 LOG_LEVEL=INFO
 PARALLEL_PROCESSING=true
 MAX_WORKERS=4
 
-# Identifiant du processus de chargement
-LOADED_BY=ETL_GOLD_TO_SNOWFLAKE
+# Data retention settings
+DELETE_SOURCE_FILES_AFTER_LOAD=false    # Delete files from landing after raw processing
+DELETE_SILVER_FILES_AFTER_LOAD=false    # Delete files from silver after gold processing
+GOLD_RETENTION_DAYS=30                  # Number of days to keep files in gold layer
+RAW_RETENTION_DAYS=0                    # 0 means keep everything, any other number sets the retention period
 
-# Informations de connexion Snowflake
-# Décommentez et remplissez ces variables pour activer la connexion Snowflake
-# (et réglez MOCK_SNOWFLAKE=false)
+# Pipeline orchestration settings
+MAX_DAYS_BACK=3                         # Maximum days to look back for processing
+LOADED_BY=ETL_PIPELINE                  # Identifier for the loading process
+
+# Snowflake connection information
+# Uncomment and fill these variables to enable Snowflake connection
+# (and set MOCK_SNOWFLAKE=false)
 #SNOWFLAKE_USER=your_username
 #SNOWFLAKE_PASSWORD=your_password
 #SNOWFLAKE_ACCOUNT=your_account
