--- a/.env
+++ b/.env
@@ -10,10 +10,10 @@ LOGS_SUBDIR=logs
 
 # Processing configuration
 EXPECTED_TABLES=Device,EPG,Playback,User,Smartcard,VODCatalog,VODCatalogExtended
-MOCK_SNOWFLAKE=true
+MOCK_SNOWFLAKE=false         # Set to true to use mock Snowflake connection (for testing purposes)
 LOG_LEVEL=INFO
 PARALLEL_PROCESSING=true
-MAX_WORKERS=4
+MAX_WORKERS=6           # Number of parallel workers for processing files
 
 # Data retention settings
 DELETE_SOURCE_FILES_AFTER_LOAD=false    # Delete files from landing after raw processing
@@ -28,10 +28,10 @@ LOADED_BY=ETL_PIPELINE                  # Identifier for the loading process
 # Snowflake connection information
 # Uncomment and fill these variables to enable Snowflake connection
 # (and set MOCK_SNOWFLAKE=false)
-#SNOWFLAKE_USER=your_username
-#SNOWFLAKE_PASSWORD=your_password
-#SNOWFLAKE_ACCOUNT=your_account
-#SNOWFLAKE_WAREHOUSE=your_warehouse
-#SNOWFLAKE_DATABASE=M7_DB_STG_DEV
-#SNOWFLAKE_SCHEMA=STG_SG
-#SNOWFLAKE_MONITORING_SCHEMA=STG_SG_MONITORING
+SNOWFLAKE_USER=AWS_SNOWFLAKE
+SNOWFLAKE_PASSWORD=Qazwsxedcrfv@007
+SNOWFLAKE_ACCOUNT=eb15765.eu-west-1
+SNOWFLAKE_WAREHOUSE=DATA_ANALYTICS_WAREHOUSE
+SNOWFLAKE_DATABASE=M7_DB_STG_DEV
+SNOWFLAKE_SCHEMA=STG_SG
+SNOWFLAKE_MONITORING_SCHEMA=STG_SG_MONITORING
