--- a/.env
+++ b/.env
@@ -10,20 +10,26 @@ LOGS_SUBDIR=logs
 
 # Processing configuration
 EXPECTED_TABLES=Device,EPG,Playback,User,Smartcard,VODCatalog,VODCatalogExtended
-MOCK_SNOWFLAKE=false         # Set to true to use mock Snowflake connection (for testing purposes)
+MOCK_SNOWFLAKE=false
 LOG_LEVEL=INFO
 PARALLEL_PROCESSING=true
-MAX_WORKERS=6           # Number of parallel workers for processing files
+MAX_WORKERS=6
 
 # Data retention settings
-DELETE_SOURCE_FILES_AFTER_LOAD=false    # Delete files from landing after raw processing
-DELETE_SILVER_FILES_AFTER_LOAD=false    # Delete files from silver after gold processing
-GOLD_RETENTION_DAYS=30                  # Number of days to keep files in gold layer
-RAW_RETENTION_DAYS=0                    # 0 means keep everything, any other number sets the retention period
+DELETE_SOURCE_FILES_AFTER_LOAD=false    
+# Delete files from landing after raw processing
+DELETE_SILVER_FILES_AFTER_LOAD=false    
+# Delete files from silver after gold processing
+GOLD_RETENTION_DAYS=30                  
+# Number of days to keep files in gold layer
+# 0 means keep everything, any other number sets the retention period
+RAW_RETENTION_DAYS=0                    
+
 
 # Pipeline orchestration settings
-MAX_DAYS_BACK=3                         # Maximum days to look back for processing
-LOADED_BY=ETL_PIPELINE                  # Identifier for the loading process
+MAX_DAYS_BACK=3                         
+LOADED_BY=ETL_PIPELINE                  
+# Identifier for the loading process
 
 # Snowflake connection information
 # Uncomment and fill these variables to enable Snowflake connection
