Update .gitignore to exclude etl_layer

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ venv/
 *.DS_Store
 
 # Dossiers de données volumineux ou temporaires
+scripts/deploiment/etl_layer/
 data/landing/
 data/raw/
 data/silver/
