readme and scripts clean

--- a/.env
+++ b/.env
@@ -41,3 +41,14 @@ SNOWFLAKE_WAREHOUSE=DATA_ANALYTICS_WAREHOUSE
 SNOWFLAKE_DATABASE=M7_DB_STG_DEV
 SNOWFLAKE_SCHEMA=STG_SG
 SNOWFLAKE_MONITORING_SCHEMA=STG_SG_MONITORING
+
+#alerte configuration
+# Uncomment and fill these variables to enable email alerts
+ENABLE_EMAIL_ALERTS=true
+SMTP_SERVER=smtp.votreserveur.com
+SMTP_PORT=587
+SMTP_USER=votre_email@domaine.com
+SMTP_PASSWORD=votre_mot_de_passe
+ADMIN_EMAIL=destinataire_alertes@domaine.com
+ERROR_THRESHOLD=5.0
+WARNING_THRESHOLD=10.0
