--- a/config/brand_configs.json
+++ b/config/brand_configs.json
@@ -6,7 +6,7 @@
         "brand_code": "CDS"
       },
       {
-        "file_name": "Canal Digitaal Resellers",
+        "file_name": "Canal Digitaal - Resellers",
         "brand_name": "Canal Digitaal",
         "brand_code": "CDR"
       },
